--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,3 +21,11 @@ mimc-rs = "0.0.2"
 poseidon-rs = "0.0.1"
 arrayref = "0.3.5"
 lazy_static = "1.4.0"
+
+[dev-dependencies]
+criterion = "0.3"
+
+[[bench]]
+name = "bench_babyjubjub"
+harness = false
+
