Optimize point add & mul_scalar methods
(On a Intel(R) Core(TM) i7-8705G CPU @ 3.10GHz, with 32 GB of RAM)

- before:
```
add                     time:   [53.447 us 53.467 us 53.492 us]
mul_scalar              time:   [121.19 ms 121.22 ms 121.25 ms]
```

- current:
```
add                     time:   [317.34 ns 317.44 ns 317.54 ns]
mul_scalar              time:   [131.05 us 131.28 us 131.58 us]
```

Which is `168x` improvement for `add`, and `923x` improvement for `mul_scalar`.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,10 +9,11 @@ repository = "https://github.com/arnaucube/babyjubjub-rs"
 readme = "README.md"
 
 [dependencies]
+ff = {package="ff_ce" , version="0.11", features = ["derive"]}
+rand = "0.4"
 num = "0.2.0"
 num-bigint = {version = "0.2.2", features = ["rand"]}
 num-traits = "0.2.8"
-rand = "0.6.5"
 blake2 = "0.8"
 generic-array = "0.13.2"
 tiny-keccak = "1.5"
