--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "babyjubjub-rs"
-version = "0.0.7"
+version = "0.0.8"
 authors = ["arnaucube <root@arnaucube.com>"]
 edition = "2018"
 license = "GPL-3.0"
@@ -15,7 +15,8 @@ rand6 = {package="rand", version="0.6.5"}
 num = "0.2.0"
 num-bigint = {version = "0.2.2", features = ["rand"]}
 num-traits = "0.2.8"
-blake-hash = "0.4.0"
+blake-hash = {version="0.4.0", optional=true}
+blake = {version="2.0.1", optional=true}
 generic-array = "0.13.2"
 tiny-keccak = "1.5"
 rustc-hex = "1.0.0"
@@ -30,3 +31,6 @@ criterion = "0.3"
 name = "bench_babyjubjub"
 harness = false
 
+[features]
+default = ["blake-hash"]
+aarch64 = ["blake"]
