Update aarch64 feature related code & minor update
- Update aarch64 feature related code
- Update benchmarks to last lib updates
- Apply Clippy fixes

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,4 +12,4 @@ jobs:
     - name: Run tests
       run: |
         cargo test --verbose
-        cargo test --verbose --no-default-features --features=aarch64
+        cargo test --verbose --features=aarch64
