--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ generic-array = "0.14"
 poseidon-rs = "0.0.8"
 arrayref = "0.3.5"
 lazy_static = "1.4.0"
+serde = { version = "1.0.152", features = ["derive"] }
 
 [dev-dependencies]
 criterion = "0.3"
