--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,8 @@ poseidon-rs = "0.0.8"
 arrayref = "0.3.5"
 lazy_static = "1.4.0"
 serde = { version = "1.0.152", features = ["derive"] }
+bytes = "1.4.0"
+rust-gmp = "0.5.0"
 
 [dev-dependencies]
 criterion = "0.3"
