--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,12 +12,13 @@ readme = "README.md"
 ff = {package="ff_ce", version= "0.11", features = ["derive"]}
 rand_new = {package="rand", version="0.8.5"}
 rand = "0.4.6"
+# rand = "0.8"
 num = "0.4"
 num-bigint = {version = "0.4", features = ["rand"]}
 num-traits = "0.2.8"
-blake2 = "0.10.6"
-# blake-hash = {version="0.4.0", optional=true}
-# blake = {version="2.0.1", optional=true}
+# blake2 = "0.10.6"
+blake-hash = {version="0.4.0", optional=true}
+blake = {version="2.0.1", optional=true}
 generic-array = "0.14"
 poseidon-rs = "0.0.8"
 arrayref = "0.3.5"
@@ -34,6 +35,6 @@ hex = "0.4"
 name = "bench_babyjubjub"
 harness = false
 
-# [features]
-# default = ["blake-hash"]
-# aarch64 = ["blake"]
+[features]
+default = ["blake-hash"]
+aarch64 = ["blake"]
