--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,9 +14,8 @@ rand_new = {package="rand", version="0.8.5"}
 rand = "0.4.6"
 # rand = "0.8"
 num = "0.4"
-num-bigint = {version = "0.4", features = ["rand"]}
+num-bigint = {version = "0.4", features = ["rand", "serde"]}
 num-traits = "0.2.8"
-# blake2 = "0.10.6"
 blake-hash = {version="0.4.0", optional=true}
 blake = {version="2.0.1", optional=true}
 generic-array = "0.14"
