--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,8 +16,6 @@ rand = "0.4.6"
 num = "0.4"
 num-bigint = {version = "0.4", features = ["rand", "serde"]}
 num-traits = "0.2.8"
-blake-hash = {version="0.4.0", optional=true}
-blake = {version="2.0.1", optional=true}
 generic-array = "0.14"
 poseidon-rs = "0.0.8"
 arrayref = "0.3.5"
@@ -34,6 +32,15 @@ hex = "0.4"
 name = "bench_babyjubjub"
 harness = false
 
-[features]
-default = ["blake-hash"]
-aarch64 = ["blake"]
+[target.'cfg(not(any( target_arch = "aarch64", target_arch = "wasm32" )))'.dependencies]
+blake-hash = {version="0.4.1" }
+
+[target.'cfg(target_arch = "aarch64")'.dependencies]
+blake = { version = "2.0.1" }
+
+[target.'cfg(target_arch = "wasm32")'.dependencies]
+blake2 = { version = "0.10.6" }
+
+# [features]
+# default = ["blake-hash"]
+# aarch64 = ["blake"]
